--- a/page9.html
+++ b/page9.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="cid-rIEZnQDetw" id="image3-1j">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="cid-rIEZnQDetw" id="image3-1j">
 
     
 
@@ -89,7 +89,7 @@
     </figure>
 </section>
 
-<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="8" data-full-width="" data-token="25065419730.727bfe1.530d89f9330046768e5c3faab1ede089" data-per-row-grid="" id="instagram-feed-block-1l" data-rv-view="92" style="background-color: rgb(35, 35, 35); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-instagram-feed" data-rows="" data-per-row-slider="5" data-spacing="8" data-full-width="" data-token="25065419730.727bfe1.530d89f9330046768e5c3faab1ede089" data-per-row-grid="" id="instagram-feed-block-1l" data-rv-view="80" style="background-color: rgb(35, 35, 35); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
@@ -189,7 +189,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Ok, proseguo' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Usiamo i cookies per garantirti un'esperienza migliore. Read our <a href='privacy.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#333333' data-cookie-colorBg='rgba(0, 230, 32, 0.99)' data-cookie-textButton='Ok, ho capito, proseguo.' data-cookie-colorButton='#333333' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Usiamo i cookies per garantirti un'esperienza migliore. Leggi la nostra <a href='privacy.html'>cookie policy</a>.">
     <input name="animation" type="hidden">
   
 </body>
