--- a/privacy.html
+++ b/privacy.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section content8 cid-rIF6kYyxfR" id="content8-1s">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section content8 cid-rIF6kYyxfR" id="content8-1s">
 
     
 
@@ -164,7 +164,7 @@ trattamento, diritto alla portabilità dei dati, diritto di opposizione), oltre 
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Ok, proseguo' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Usiamo i cookies per garantirti un'esperienza migliore. Read our <a href='privacy.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#333333' data-cookie-colorBg='rgba(0, 230, 32, 0.99)' data-cookie-textButton='Ok, ho capito, proseguo.' data-cookie-colorButton='#333333' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="Usiamo i cookies per garantirti un'esperienza migliore. Leggi la nostra <a href='privacy.html'>cookie policy</a>.">
     <input name="animation" type="hidden">
   
 </body>
